--- a/locale/tr/LC_MESSAGES/django.po
+++ b/locale/tr/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-12-07 15:55+0300\n"
+"POT-Creation-Date: 2024-12-07 16:04+0300\n"
 "PO-Revision-Date: 2024-11-30 23:59+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1683,414 +1683,276 @@ msgstr "mevcut değil"
 #: bill/templates/state/redesign/reviewed/change_coat.html:44
 #: bill/templates/state/redesign/reviewed/change_form.html:37
 #: bill/templates/state/redesign/reviewed/change_residency.html:55
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Принять"
 msgctxt "change_residency_reviewed"
 msgid "принят"
-msgstr "Kabul et"
+msgstr "kabul edildi"
 
 #: bill/templates/state/redesign/reviewed/change_coat.html:46
 #: bill/templates/state/redesign/reviewed/change_form.html:39
 #: bill/templates/state/redesign/reviewed/change_residency.html:57
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Отклонить"
 msgctxt "change_residency_reviewed"
 msgid "отклонён"
-msgstr "Reddet"
+msgstr "redd edildi"
 
 #: bill/templates/state/redesign/reviewed/change_coat.html:48
 #: bill/templates/state/redesign/reviewed/change_form.html:41
 #: bill/templates/state/redesign/reviewed/change_residency.html:59
-#, fuzzy
-#| msgid "Отмена"
 msgctxt "change_residency_reviewed"
 msgid "отменён"
-msgstr "İptal etme"
+msgstr "iptal edildi"
 
 #: bill/templates/state/redesign/reviewed/change_residency.html:35
-#, fuzzy
-#| msgid "Автоматы"
 msgctxt "change_residency_reviewed"
 msgid "Автоматы"
 msgstr "Tüfekler"
 
 #: bill/templates/state/redesign/reviewed/change_residency.html:38
-#, fuzzy
-#| msgid "БПЛА"
 msgctxt "change_residency_reviewed"
 msgid "БПЛА"
 msgstr "İHA"
 
 #: bill/templates/state/redesign/reviewed/change_taxes.html:30
-#, fuzzy
-#| msgid "Государство"
 msgctxt "change_taxes_reviewed"
 msgid "всё государство"
-msgstr "Devlet"
+msgstr "tüm devlet"
 
 #: bill/templates/state/redesign/reviewed/change_taxes.html:58
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Принять"
 msgctxt "change_taxes_reviewed"
 msgid "принят"
-msgstr "Kabul et"
+msgstr "kabul edildi"
 
 #: bill/templates/state/redesign/reviewed/change_taxes.html:60
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Отклонить"
 msgctxt "change_taxes_reviewed"
 msgid "отклонён"
-msgstr "Reddet"
+msgstr "redd edildi"
 
 #: bill/templates/state/redesign/reviewed/change_taxes.html:62
-#, fuzzy
-#| msgid "Отмена"
 msgctxt "change_taxes_reviewed"
 msgid "отменён"
-msgstr "İptal etme"
+msgstr "iptal oldu"
 
 #: bill/templates/state/redesign/reviewed/change_title.html:37
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Принять"
 msgctxt "change_title_reviewed"
 msgid "принят"
-msgstr "Kabul et"
+msgstr "kabul edildi"
 
 #: bill/templates/state/redesign/reviewed/change_title.html:39
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Отклонить"
 msgctxt "change_title_reviewed"
 msgid "отклонён"
-msgstr "Reddet"
+msgstr "redd edildi"
 
 #: bill/templates/state/redesign/reviewed/change_title.html:41
-#, fuzzy
-#| msgid "Отмена"
 msgctxt "change_title_reviewed"
 msgid "отменён"
-msgstr "İptal etme"
+msgstr "iptal edildi"
 
 #: bill/templates/state/redesign/reviewed/construction.html:55
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Принять"
 msgctxt "construction_reviewed"
 msgid "принят"
-msgstr "Kabul et"
+msgstr "kabul edildi"
 
 #: bill/templates/state/redesign/reviewed/construction.html:57
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Отклонить"
 msgctxt "construction_reviewed"
 msgid "отклонён"
-msgstr "Reddet"
+msgstr "redd edildi"
 
 #: bill/templates/state/redesign/reviewed/construction.html:59
-#, fuzzy
-#| msgid "Отмена"
 msgctxt "construction_reviewed"
 msgid "отменён"
-msgstr "İptal etme"
+msgstr "iptal edildi"
 
 #: bill/templates/state/redesign/reviewed/explore_resources.html:36
-#, fuzzy
-#| msgid "Наличные"
 msgctxt "explore_resources_reviewed"
 msgid "Наличные"
 msgstr "Peşin para"
 
 #: bill/templates/state/redesign/reviewed/explore_resources.html:49
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Принять"
 msgctxt "explore_resources_reviewed"
 msgid "принят"
-msgstr "Kabul et"
+msgstr "kabul et"
 
 #: bill/templates/state/redesign/reviewed/explore_resources.html:51
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Отклонить"
 msgctxt "explore_resources_reviewed"
 msgid "отклонён"
-msgstr "Reddet"
+msgstr "redd edildi"
 
 #: bill/templates/state/redesign/reviewed/explore_resources.html:53
-#, fuzzy
-#| msgid "Отмена"
 msgctxt "explore_resources_reviewed"
 msgid "отменён"
-msgstr "İptal etme"
+msgstr "iptal edildi"
 
 #: bill/templates/state/redesign/reviewed/geological_surveys.html:36
-#, fuzzy
-#| msgctxt "goods"
-#| msgid "Буровые установки"
 msgctxt "geological_surveys_reviewed"
 msgid "Буровые установки"
 msgstr "Sondaj kuleleri"
 
 #: bill/templates/state/redesign/reviewed/geological_surveys.html:49
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Принять"
 msgctxt "geological_surveys_reviewed"
 msgid "принят"
-msgstr "Kabul et"
+msgstr "kabul edildi"
 
 #: bill/templates/state/redesign/reviewed/geological_surveys.html:51
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Отклонить"
 msgctxt "geological_surveys_reviewed"
 msgid "отклонён"
-msgstr "Reddet"
+msgstr "redd edildi"
 
 #: bill/templates/state/redesign/reviewed/geological_surveys.html:53
-#, fuzzy
-#| msgid "Отмена"
 msgctxt "geological_surveys_reviewed"
 msgid "отменён"
-msgstr "İptal etme"
+msgstr "iptal edildi"
 
 #: bill/templates/state/redesign/reviewed/independence.html:41
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Принять"
 msgctxt "independence_reviewed"
 msgid "принят"
-msgstr "Kabul et"
+msgstr "kabul edildi"
 
 #: bill/templates/state/redesign/reviewed/independence.html:43
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Отклонить"
 msgctxt "independence_reviewed"
 msgid "отклонён"
-msgstr "Reddet"
+msgstr "redd edildi"
 
 #: bill/templates/state/redesign/reviewed/independence.html:45
-#, fuzzy
-#| msgid "Отмена"
 msgctxt "independence_reviewed"
 msgid "отменён"
-msgstr "İptal etme"
+msgstr "iptal edildi"
 
 #: bill/templates/state/redesign/reviewed/martial_law.html:46
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Принять"
 msgctxt "martial_law_reviewed"
 msgid "принят"
-msgstr "Kabul et"
+msgstr "kabul edildi"
 
 #: bill/templates/state/redesign/reviewed/martial_law.html:48
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Отклонить"
 msgctxt "martial_law_reviewed"
 msgid "отклонён"
-msgstr "Reddet"
+msgstr "redd edildi"
 
 #: bill/templates/state/redesign/reviewed/martial_law.html:50
-#, fuzzy
-#| msgid "Отмена"
 msgctxt "martial_law_reviewed"
 msgid "отменён"
-msgstr "İptal etme"
+msgstr "iptal edildi"
 
 #: bill/templates/state/redesign/reviewed/purchase_auction.html:32
-#, fuzzy
-#| msgid "Наличные"
 msgctxt "purchase_auction_reviewed"
 msgid "Наличные"
 msgstr "Peşin para"
 
 #: bill/templates/state/redesign/reviewed/purchase_auction.html:46
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Принять"
 msgctxt "purchase_auction_reviewed"
 msgid "принят"
-msgstr "Kabul et"
+msgstr "kabul edildi"
 
 #: bill/templates/state/redesign/reviewed/purchase_auction.html:48
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Отклонить"
 msgctxt "purchase_auction_reviewed"
 msgid "отклонён"
-msgstr "Reddet"
+msgstr "redd edildi"
 
 #: bill/templates/state/redesign/reviewed/purchase_auction.html:50
-#, fuzzy
-#| msgid "Отмена"
 msgctxt "purchase_auction_reviewed"
 msgid "отменён"
-msgstr "İptal etme"
+msgstr "iptal edildi"
 
 #: bill/templates/state/redesign/reviewed/start_war.html:77
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Принять"
 msgctxt "start_war_reviewed"
 msgid "принят"
-msgstr "Kabul et"
+msgstr "kabul edildi"
 
 #: bill/templates/state/redesign/reviewed/start_war.html:79
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Отклонить"
 msgctxt "start_war_reviewed"
 msgid "отклонён"
-msgstr "Reddet"
+msgstr "redd edildi"
 
 #: bill/templates/state/redesign/reviewed/start_war.html:81
-#, fuzzy
-#| msgid "Отмена"
 msgctxt "start_war_reviewed"
 msgid "отменён"
-msgstr "İptal etme"
+msgstr "iptal edildi"
 
 #: bill/templates/state/redesign/reviewed/transfer_accept.html:60
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Принять"
 msgctxt "transfer_accept_reviewed"
 msgid "принят"
-msgstr "Kabul et"
+msgstr "kabul edildi"
 
 #: bill/templates/state/redesign/reviewed/transfer_accept.html:62
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Отклонить"
 msgctxt "transfer_accept_reviewed"
 msgid "отклонён"
-msgstr "Reddet"
+msgstr "redd edildi"
 
 #: bill/templates/state/redesign/reviewed/transfer_accept.html:64
-#, fuzzy
-#| msgid "Отмена"
 msgctxt "transfer_accept_reviewed"
 msgid "отменён"
-msgstr "İptal etme"
+msgstr "iptal edildi"
 
 #: bill/templates/state/redesign/reviewed/transfer_region.html:60
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Принять"
 msgctxt "transfer_region_reviewed"
 msgid "принят"
-msgstr "Kabul et"
+msgstr "kabul edildi"
 
 #: bill/templates/state/redesign/reviewed/transfer_region.html:62
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Отклонить"
 msgctxt "transfer_region_reviewed"
 msgid "отклонён"
-msgstr "Reddet"
+msgstr "redd edildi"
 
 #: bill/templates/state/redesign/reviewed/transfer_region.html:64
-#, fuzzy
-#| msgid "Отмена"
 msgctxt "transfer_region_reviewed"
 msgid "отменён"
-msgstr "İptal etme"
+msgstr "iptal edildi"
 
 #: bill/templates/state/redesign/reviewed/transfer_resources.html:41
-#, fuzzy
-#| msgid "Наличные"
 msgctxt "transfer_resources_reviewed"
 msgid "Наличные"
 msgstr "Peşin para"
 
 #: bill/templates/state/redesign/reviewed/transfer_resources.html:54
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Принять"
 msgctxt "transfer_resources_reviewed"
 msgid "принят"
-msgstr "Kabul et"
+msgstr "kabul edildi"
 
 #: bill/templates/state/redesign/reviewed/transfer_resources.html:56
-#, fuzzy
-#| msgctxt "party_requests"
-#| msgid "Отклонить"
 msgctxt "transfer_resources_reviewed"
 msgid "отклонён"
-msgstr "Reddet"
+msgstr "redd edildi"
 
 #: bill/templates/state/redesign/reviewed/transfer_resources.html:58
-#, fuzzy
-#| msgid "Отмена"
 msgctxt "transfer_resources_reviewed"
 msgid "отменён"
-msgstr "İptal etme"
+msgstr "iptal edildi"
 
 #: bill/views/bills/cancel_bill.py:70
-#, fuzzy
-#| msgctxt "party"
-#| msgid "Вы не состоите в указанной партии"
 msgctxt "cancel_bill"
 msgid "Вы не автор законопроекта"
-msgstr "Belirtilen partinin üyesi değilsiniz"
+msgstr "Kanunun yazarı siz değilsiniz"
 
 #: bill/views/bills/cancel_bill.py:71 bill/views/bills/cancel_bill.py:78
 #: bill/views/bills/cancel_bill.py:85 bill/views/bills/cancel_bill.py:92
 #: bill/views/bills/cancel_bill.py:99 bill/views/bills/cancel_bill.py:106
 #: bill/views/bills/cancel_bill.py:114
-#, fuzzy
-#| msgctxt "skill_cancel"
-#| msgid "Отмена изучения навыка"
 msgctxt "cancel_bill"
 msgid "Отмена законопроекта"
-msgstr "Beceri yükseltme iptal"
+msgstr "Kanunun iptalı"
 
 #: bill/views/bills/cancel_bill.py:77
-#, fuzzy
-#| msgid "Нет такого навыка"
 msgctxt "cancel_bill"
 msgid "Нет такого законопроекта"
-msgstr "Yok böyle bir yetenek"
+msgstr "Yok böyle bir kanun"
 
 #: bill/views/bills/cancel_bill.py:84
-#, fuzzy
-#| msgid "Нет такого навыка"
 msgctxt "cancel_bill"
 msgid "Нет такого вида законопроекта"
-msgstr "Yok böyle bir yetenek"
+msgstr "Yok böyle bir kanun"
 
 #: bill/views/bills/cancel_bill.py:91
-#, fuzzy
-#| msgctxt "overview"
-#| msgid "парламент"
 msgctxt "cancel_bill"
 msgid "Вы - не депутат этого парламента"
-msgstr "parlamento"
+msgstr "Sen bu parlamentonun üyesi değilsin"
 
 #: bill/views/bills/cancel_bill.py:98
-#, fuzzy
-#| msgctxt "storage"
-#| msgid "В этом регионе нет Склада"
 msgctxt "cancel_bill"
 msgid "В этом государстве нет парламента"
-msgstr "Bu bölgede Depo bulunmamaktadır"
+msgstr "Bu devletde parlamemto yok"
 
 #: bill/views/bills/cancel_bill.py:105
-#, fuzzy
-#| msgctxt "storage"
-#| msgid "В этом регионе нет Склада"
 msgctxt "cancel_bill"
 msgid "В этом регионе нет государства"
-msgstr "Bu bölgede Depo bulunmamaktadır"
+msgstr "Bu bölgede devlet yok"
 
 #: bill/views/bills/new_bill.py:48
 msgctxt "new_bill"
