--- a/locale/az/LC_MESSAGES/django.po
+++ b/locale/az/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-12-17 03:06+0300\n"
-"PO-Revision-Date: 2024-12-17 17:07+0300\n"
+"PO-Revision-Date: 2024-12-23 18:08+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: az\n"
@@ -1033,37 +1033,37 @@ msgctxt "new_bill"
 msgid "Нет такого ресурса"
 msgstr "Belə resurs mövcud deyil"
 
+#. Отредактировано B♤SS, id 2344
 #: bill/models/explore_all.py:424
-#, fuzzy
 #| msgctxt "new_bill"
 #| msgid "Разведка ресурсов"
 msgctxt "new_bill"
 msgid "Разведка всех регионов"
-msgstr "Resursun kəşfiyyatı"
+msgstr "Bütün bölgələrin kəşfiyyatı"
 
+#. Отредактировано B♤SS, id 2344
 #: bill/models/explore_all.py:425
-#, fuzzy
 #| msgctxt "new_bill"
 #| msgid "Разведки ресурсов"
 msgctxt "new_bill"
 msgid "Разведки всех регионов"
-msgstr "Resursların kəşfiyyatları"
+msgstr "Bütün bölgələrin kəşfiyyatı kəşfiyyatları"
 
+#. Отредактировано B♤SS, id 2344
 #: bill/models/explore_all_region.py:25
-#, fuzzy
 #| msgctxt "explore_resources_draft"
 #| msgid "стоимость разведки"
 msgctxt "new_bill"
 msgid "Часть общей разведки"
-msgstr "kəşfiyyatın qiyməti"
+msgstr "Ümumi kəşfiyyatın hissəsi"
 
+#. Отредактировано B♤SS, id 2344
 #: bill/models/explore_all_region.py:26
-#, fuzzy
 #| msgctxt "explore_resources_draft"
 #| msgid "стоимость разведки"
 msgctxt "new_bill"
 msgid "Части общей разведки"
-msgstr "kəşfiyyatın qiyməti"
+msgstr "Ümumi kəşfiyyatın hissəsi"
 
 #: bill/models/explore_resources.py:91
 msgctxt "new_bill"
@@ -1571,16 +1571,16 @@ msgctxt "construction_draft"
 msgid "Нет доступных регионов"
 msgstr "Movcud bölgə yoxdur"
 
+#. Отредактировано B♤SS, id 2344
 #: bill/templates/state/redesign/drafts/explore_all.html:36
-#, fuzzy
 #| msgctxt "explore_resources_draft"
 #| msgid "выберите ресурс"
 msgctxt "explore_all_resources_draft"
 msgid "выберите ресурс"
 msgstr "resursu seçin"
 
+#. Отредактировано B♤SS, id 2344
 #: bill/templates/state/redesign/drafts/explore_all.html:47
-#, fuzzy
 #| msgctxt "explore_resources_draft"
 #| msgid "стоимость разведки"
 msgctxt "explore_all_resources_draft"
@@ -4414,13 +4414,13 @@ msgctxt "set_ministers"
 msgid "Указанного права министров не существует: %(right)s"
 msgstr "Göstərilən nazir hüquqları mövcud deyil: %(right)s"
 
+#. Отредактировано B♤SS, id 2344
 #: gov/views/set_ministers.py:94
-#, fuzzy
 #| msgctxt "set_ministers"
 #| msgid "Сумма очков назначения министров превышает 13"
 msgctxt "set_ministers"
 msgid "Сумма очков назначения министров превышает 15"
-msgstr "Nazir təyinatının xal toplamı 13 keçir"
+msgstr "Nazir təyinatının xal toplamı 15 keçməlidir"
 
 #: gov/views/switch_description.py:22
 msgctxt "edit_state_descr"
@@ -4687,31 +4687,33 @@ msgctxt "no_party"
 msgid "создать партию"
 msgstr "partiya yarad"
 
+#. Отредактировано B♤SS, id 2344
 #: party/templates/party/redesign/new_party.html:51
-#, fuzzy
 #| msgctxt "skill_top"
 #| msgid "Топ прироста Характеристик"
 msgctxt "new_party"
 msgid "Требуется сумма уровней Характеристик"
-msgstr "Xüsusiyyət"
+msgstr "Atribut səviyyələrinin cəmini tələb edir"
 
+#. Отредактировано B♤SS, id 2344
 #: party/templates/party/redesign/new_party.html:53
-#, fuzzy
 #| msgctxt "profile"
 #| msgid "суммарный урон"
 msgctxt "new_party"
 msgid "Ваш суммарный уровень"
-msgstr "Ümumi zərər"
+msgstr "Sizin ümumi səviyyəniz"
 
+#. Отредактировано B♤SS, id 2344
 #: party/templates/party/redesign/new_party.html:55
 msgctxt "new_party"
 msgid "Рекомендуем присоединиться к одной из существующих партий, и изучить игру, прежде чем начинать собственную карьеру партийного лидера"
-msgstr ""
+msgstr "Partiya lideri kimi öz karyeranıza başlamazdan əvvəl mövcud partiyalardan birinə qoşulmağı və oyunu öyrənməyi tövsiyə edirik"
 
+#. Отредактировано B♤SS, id 2344
 #: party/templates/party/redesign/new_party.html:58
 msgctxt "new_party"
 msgid "Ниже представлены партии в порядке давности убывания онлайна их лидеров. Они, вероятнее всего, будут рады принять вас к себе"
-msgstr ""
+msgstr "Aşağıda liderlərinin onlayn olaraq enən partiyalar yenilik sırasına görə verilmişdir. Çox güman ki, sizi qonaq etməkdən məmnun olacaqlar."
 
 #: party/templates/party/redesign/new_party.html:67
 #: party/views/lists/region_parties.py:67
@@ -4722,8 +4724,8 @@ msgctxt "lists"
 msgid "Размер"
 msgstr "Ölçü"
 
+#. Отредактировано B♤SS, id 2344
 #: party/templates/party/redesign/new_party.html:69
-#, fuzzy
 #| msgctxt "party_manage"
 #| msgid "Глава партии"
 msgctxt "new_party"
@@ -6999,8 +7001,8 @@ msgctxt "set_plane_nick"
 msgid "Указанный самолёт вам не принадлежит"
 msgstr "Seçilmiş təyyarə sizin deyil"
 
+#. Отредактировано B♤SS, id 2344
 #: player/views/customization/plane/view_planes.py:34
-#, fuzzy
 #| msgctxt "plane_select"
 #| msgid "Авиация"
 msgctxt "view_planes"
@@ -7181,12 +7183,14 @@ msgctxt "new_player"
 msgid "Ошибка в форме профиля"
 msgstr "Metod xətası"
 
+#. Отредактировано B♤SS, id 2344
 #: player/views/open_lootboxes.py:25
 #: storage/views/vault/avia_box/open_aviaboxes.py:28
 msgctxt "open_box"
 msgid "Кейсы отключены"
-msgstr ""
+msgstr "Keyslər bağlıdır"
 
+#. Отредактировано B♤SS, id 2344
 #: player/views/open_lootboxes.py:26 player/views/open_lootboxes.py:37
 #: player/views/open_lootboxes.py:48 player/views/open_lootboxes.py:58
 #: player/views/open_lootboxes.py:133
@@ -7198,62 +7202,61 @@ msgstr ""
 #: storage/views/vault/avia_box/open_aviaboxes.py:91
 #: storage/views/vault/avia_box/open_aviaboxes.py:100
 #: storage/views/vault/avia_box/open_aviaboxes.py:183
-#, fuzzy
 #| msgid "Открытие Аэрокейсов"
 msgctxt "open_box"
 msgid "Открытие кейсов"
-msgstr "Ayrokeysin açılması"
+msgstr "Keyslərin açılması"
 
+#. Отредактировано B♤SS, id 2344
 #: player/views/open_lootboxes.py:36
 #: storage/views/vault/avia_box/open_aviaboxes.py:77
-#, fuzzy
 #| msgctxt "overview"
 #| msgid "У вас пока еще нет стикеров"
 msgctxt "open_box"
 msgid "У вас нет кейсов"
-msgstr "Hələ stikerləriniz yoxdur"
+msgstr "Keysləriniz yoxdur"
 
+#. Отредактировано B♤SS, id 2344
 #: player/views/open_lootboxes.py:47
 #: storage/views/vault/avia_box/open_aviaboxes.py:90
-#, fuzzy
 #| msgctxt "storage"
 #| msgid "Некорректное число денег игрока"
 msgctxt "open_box"
 msgid "Некорректное количество кейсов для открытия"
-msgstr "Oyunçunun pulu səhvdir"
+msgstr "Açılacaq keyslərin sayı səhvdir"
 
+#. Отредактировано B♤SS, id 2344
 #: player/views/open_lootboxes.py:57
 #: storage/views/vault/avia_box/open_aviaboxes.py:99
-#, fuzzy
 #| msgctxt "assets"
 #| msgid "недостаточно места для товара."
 msgctxt "open_box"
 msgid "Недостаточно кейсов для открытия"
-msgstr "Məsul üçün kifayət qədər yer yoxdur"
+msgstr "Açmaq üçün kifayət qədər keysiniz yoxdur"
 
+#. Отредактировано B♤SS, id 2344
 #: player/views/set_language.py:36
-#, fuzzy
 #| msgid "Такого языка в игре нет"
 msgctxt "set_language"
 msgid "Такого языка в игре нет"
 msgstr "Oyunda belə dil yoxdur"
 
+#. Отредактировано B♤SS, id 2344
 #: player/views/set_language.py:37 player/views/set_language.py:53
-#, fuzzy
 #| msgid "Изменение языка"
 msgctxt "set_language"
 msgid "Изменение языка"
 msgstr "Dilin dəyişilməsi"
 
+#. Отредактировано B♤SS, id 2344
 #: player/views/set_timezone.py:27
-#, fuzzy
 #| msgid "Такого часового пояса в игре нет"
 msgctxt "set_timezone"
 msgid "Такого часового пояса в игре нет"
 msgstr "Belə saat qurşağı oyunda yoxdur"
 
+#. Отредактировано B♤SS, id 2344
 #: player/views/set_timezone.py:28 player/views/set_timezone.py:44
-#, fuzzy
 #| msgid "Изменение часового пояса"
 msgctxt "set_timezone"
 msgid "Изменение часового пояса"
@@ -7658,12 +7661,12 @@ msgctxt "mining"
 msgid "Запасов руды в регионе недостаточно для добычи"
 msgstr "Madənçilik üçün kifayət qədər filiz yoxdur"
 
+#. Отредактировано B♤SS, id 2344
 #: region/views/lists/world_regions.py:90
-#, fuzzy
 #| msgid "Регионы игры"
 msgctxt "world_regions"
 msgid "Регионы игры"
-msgstr "Oyunun bölgələri"
+msgstr "Oyun bölgələri"
 
 #: region/views/map/get_residency.py:30
 msgctxt "get_residency"
@@ -8066,13 +8069,13 @@ msgctxt "state_view"
 msgid "не избран"
 msgstr "seçilməyib"
 
+#. Отредактировано B♤SS, id 2344
 #: state/templates/state/redesign/state_view.html:136
-#, fuzzy
 #| msgctxt "overview"
 #| msgid "Выборы лидера"
 msgctxt "state_view"
 msgid "Зарплата лидера"
-msgstr "Lider seçkiləri"
+msgstr "Liderin maaşı"
 
 #: state/templates/state/redesign/state_view.html:143
 msgctxt "state_view"
@@ -9762,42 +9765,43 @@ msgctxt "assets"
 msgid "Аэрокейсы"
 msgstr "Aerokeyslər"
 
+#. Отредактировано B♤SS, id 2344
 #: storage/views/vault/avia_box/open_aviaboxes.py:42
-#, fuzzy
 #| msgctxt "education"
 #| msgid "Ошибка получения награды"
 msgctxt "open_box"
 msgid "У вас нет неполученных наград"
-msgstr "Mükafatın alınmasında xəta baş verdi"
+msgstr "Mükafatınız yoxdur"
 
+#. Отредактировано B♤SS, id 2344
 #: storage/views/vault/avia_box/open_aviaboxes.py:50
-#, fuzzy, python-format
+#, python-format
 #| msgctxt "new_article"
 #| msgid "Недостаточно золота, необходимо: %(price)s"
 msgctxt "open_box"
 msgid "Недостаточно золота, необходимо: %(value)s"
-msgstr "Qızıl kifayət qədər deyil: %(price)s lazımdır"
+msgstr "Qızıl kifayət qədər deyil: %(value)s lazımdır"
 
 #: storage/views/vault/lootbox.py:42
 msgctxt "assets"
 msgid "Сундуки"
 msgstr "Sandıqlar"
 
+#. Отредактировано B♤SS, id 2344
 #: storage/views/vault/use_card.py:25
-#, fuzzy
 #| msgctxt "factory"
 #| msgid "Недостаточно "
 msgctxt "use_card"
 msgid "Недостаточно Wild Pass"
-msgstr "Kifayət deyil"
+msgstr "Kifayət qədər Wild Pass yoxdur"
 
+#. Отредактировано B♤SS, id 2344
 #: storage/views/vault/use_card.py:26 storage/views/vault/use_card.py:70
-#, fuzzy
 #| msgctxt "storage_assets"
 #| msgid "Активация"
 msgctxt "use_card"
 msgid "Активация Wild Pass"
-msgstr "Aktivləşdir"
+msgstr "Wild Pass aktivləşdir"
 
 #: war/consumers.py:161
 msgctxt "war_consumers"
@@ -9885,32 +9889,32 @@ msgctxt "war_consumers"
 msgid "Не удалось отправить войска, повторите попытку"
 msgstr "Ordu göndərmək mümkün olmadı, təkrarlayın"
 
+#. Отредактировано B♤SS, id 2344
 #: war/models/wars/event_war.py:280 war/models/wars/ground_war.py:804
 #: war/models/wars/revolution/revolution.py:549
-#, fuzzy
 #| msgctxt "medals"
 #| msgid "За нанесение урона в боях"
 msgctxt "war_page"
 msgid "График урона в бою"
-msgstr "Savaşlarda zərər verməyə görə"
+msgstr "Savaşın zərər qrafiki"
 
+#. Отредактировано B♤SS, id 2344
 #: war/models/wars/event_war.py:284 war/models/wars/ground_war.py:808
 #: war/models/wars/revolution/revolution.py:553
-#, fuzzy
 #| msgctxt "party_hist"
 #| msgid "дата вступления"
 msgctxt "war_page"
 msgid "дата/время"
-msgstr "qəbul tarixi"
+msgstr "tarix/vaxt"
 
+#. Отредактировано B♤SS, id 2344
 #: war/models/wars/event_war.py:290 war/models/wars/ground_war.py:814
 #: war/models/wars/revolution/revolution.py:559
-#, fuzzy
 #| msgctxt "lists"
 #| msgid "оборона"
 msgctxt "war_page"
 msgid "очки урона"
-msgstr "Müdafiə"
+msgstr "toplam zərər"
 
 #: war/templates/war/redesign/EventWar.html:63
 msgctxt "war_page"
@@ -10097,13 +10101,13 @@ msgctxt "join_revolution"
 msgid "Вы принимали участие в восстании последние 10 дней"
 msgstr "Son 10 gün ərzində üsyanda iştirak etmisiz"
 
+#. Отредактировано B♤SS, id 2344
 #: war/views/join_revolution.py:110
-#, fuzzy
 #| msgctxt "new_bill"
 #| msgid "В данном регионе введено военное положение"
 msgctxt "join_revolution"
 msgid "В данном регионе объявлено мирное время"
-msgstr "Bu bölgədə hərbi vəziyyət tətbiq edilib"
+msgstr "Bu bölgədə sülh vaxtı elan edilib"
 
 #: war/views/open_war_side_list.py:115
 msgctxt "lists"
@@ -10120,30 +10124,30 @@ msgctxt "lists"
 msgid "Урон за сторону:"
 msgstr "Zərər"
 
+#. Отредактировано B♤SS, id 2344
 #: war/views/switch_war_visibility.py:38
-#, fuzzy
 #| msgid "Нет такого типа войн"
 msgctxt "war_visibility"
 msgid "Нет такого типа войн"
 msgstr "Belə növ müharibə yoxdur"
 
+#. Отредактировано B♤SS, id 2344
 #: war/views/switch_war_visibility.py:39 war/views/switch_war_visibility.py:47
 #: war/views/switch_war_visibility.py:63 war/views/switch_war_visibility.py:91
-#, fuzzy
 #| msgid "Скрытие войны"
 msgctxt "war_visibility"
 msgid "Скрытие войны"
 msgstr "Savaşın gizlədilməsi"
 
+#. Отредактировано B♤SS, id 2344
 #: war/views/switch_war_visibility.py:46
-#, fuzzy
 #| msgid "Нет такой войны"
 msgctxt "war_visibility"
 msgid "Нет такой войны"
 msgstr "Belə müharibə yoxdur"
 
+#. Отредактировано B♤SS, id 2344
 #: war/views/switch_war_visibility.py:62
-#, fuzzy
 #| msgid "Нет такой записи об участии в бою"
 msgctxt "war_visibility"
 msgid "Нет такой записи об участии в бою"
