--- a/locale/az/LC_MESSAGES/django.po
+++ b/locale/az/LC_MESSAGES/django.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-01-01 22:25+0300\n"
-"PO-Revision-Date: 2024-12-23 18:08+0300\n"
+"POT-Creation-Date: 2025-01-01 22:38+0300\n"
+"PO-Revision-Date: 2025-01-01 22:39+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: az\n"
@@ -8952,12 +8952,12 @@ msgstr "məhv etmək"
 #: storage/templates/storage/redesign/assets.html:84
 msgctxt "assets"
 msgid "уверен"
-msgstr "Əminəm"
+msgstr "əminəm"
 
 #: storage/templates/storage/redesign/assets.html:90
 msgctxt "assets"
 msgid "выберите склад"
-msgstr "Deponu seç"
+msgstr "deponu seç"
 
 #: storage/templates/storage/redesign/assets.html:101
 #: storage/templates/storage/redesign/assets.html:167
@@ -9797,7 +9797,7 @@ msgstr "Depo"
 #: storage/views/assets/assets_transfer.py:83
 msgctxt "assets"
 msgid "вам не принадлежит"
-msgstr "Sizə aid deyil"
+msgstr "sizə aid deyil"
 
 #: storage/views/assets/assets_destroy.py:51
 #: storage/views/assets/assets_destroy.py:75
@@ -9859,14 +9859,14 @@ msgstr "məhsul kifayət qədər deyil"
 #: storage/views/assets/assets_transfer.py:207
 msgctxt "assets"
 msgid "Требуется: "
-msgstr "Lazimdır:"
+msgstr "Lazimdır: "
 
 #: storage/views/assets/assets_destroy.py:114
 #: storage/views/assets/assets_transfer.py:197
 #: storage/views/assets/assets_transfer.py:208
 msgctxt "assets"
 msgid ", в наличии: "
-msgstr ", var:"
+msgstr ", var: "
 
 #: storage/views/assets/assets_destroy.py:122
 msgctxt "assets"
@@ -9939,12 +9939,12 @@ msgstr "Çatdırılma xərcini ödəmək üçün kifayət qədər vəsait yoxdur
 #: storage/views/assets/assets_transfer.py:194
 msgctxt "assets"
 msgid "типоразмер:"
-msgstr "Guya həcmdi bu?"
+msgstr "bildiriş:"
 
 #: storage/views/assets/assets_transfer.py:196
 msgctxt "assets"
 msgid "недостаточно места для товара."
-msgstr "Məsul üçün kifayət qədər yer yoxdur"
+msgstr "məhsul üçün kifayət qədər yer yoxdur"
 
 #: storage/views/assets/assets_transfer.py:206
 msgctxt "assets"
@@ -10538,11 +10538,9 @@ msgid "Торговое предложение успешно принято"
 msgstr "Ticarət təklifi uğurla qəbul edildi"
 
 #: storage/views/vault/avia_box/avia_lootbox.py:124
-#, fuzzy
-#| msgid "Открытие сундуков"
 msgctxt "assets"
 msgid "Ледяные сундуки"
-msgstr "Sandığın açılması"
+msgstr "Sandıqlar"
 
 #: storage/views/vault/lootbox.py:42
 msgctxt "assets"
@@ -10898,15 +10896,11 @@ msgstr "Savaşlar"
 #~ msgid "Аэрокейсы"
 #~ msgstr "Aerokeyslər"
 
-#~| msgctxt "education"
-#~| msgid "Ошибка получения награды"
 #~ msgctxt "open_box"
 #~ msgid "У вас нет неполученных наград"
 #~ msgstr "Mükafatınız yoxdur"
 
 #, python-format
-#~| msgctxt "new_article"
-#~| msgid "Недостаточно золота, необходимо: %(price)s"
 #~ msgctxt "open_box"
 #~ msgid "Недостаточно золота, необходимо: %(value)s"
 #~ msgstr "Qızıl kifayət qədər deyil: %(value)s lazımdır"
