--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-01-01 22:38+0300\n"
-"PO-Revision-Date: 2025-01-01 22:27+0300\n"
+"PO-Revision-Date: 2025-01-03 22:19+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -929,7 +929,7 @@ msgstr "The new name must not be empty"
 #: bill/models/change_title.py:154
 msgctxt "new_bill"
 msgid "Переименование государства"
-msgstr "Rename your starte"
+msgstr "State renaming"
 
 #: bill/models/change_title.py:155
 msgctxt "new_bill"
