--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-01-26 21:48+0300\n"
-"PO-Revision-Date: 2025-01-22 13:07+0300\n"
+"PO-Revision-Date: 2025-01-26 21:49+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -7401,12 +7401,9 @@ msgid "Кейсы отключены"
 msgstr "Lootboxes are disabled"
 
 #: player/views/buy_lootboxes.py:39
-#, fuzzy
-#| msgctxt "open_box"
-#| msgid "Открытие кейсов"
 msgctxt "open_box"
 msgid "Приобретение кейсов"
-msgstr "Opening of Lootboxes"
+msgstr "Lootboxes buying"
 
 #: player/views/buy_lootboxes.py:168 player/views/cash_lootboxes.py:166
 #: player/views/change_back_allow.py:57
