--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 17:38+0300\n"
-"PO-Revision-Date: 2025-02-12 17:29+0300\n"
+"POT-Creation-Date: 2025-02-12 21:01+0300\n"
+"PO-Revision-Date: 2025-02-12 21:16+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -5832,17 +5832,17 @@ msgid ""
 "Я, передавая уникальные идентификаторы социальных сетей, а также имя, "
 "фамилию и псевдонимы в них, далее именуемый(ая) \"Субъект персональных "
 "данных\", даю свое согласие на обработку своих персональных данных "
-"Администрацией Wild Politics, физическим лицом Горшенин А.И., далее "
-"именуемым \"Администрация\", в соответствии с законодательством Российской "
-"Федерации (далее - \"Законодательство\")."
+"Администрацией Wild Politics, физическим лицом Горшенин Андрей Игоревич, "
+"далее именуемым \"Администрация\", в соответствии с законодательством "
+"Российской Федерации (далее - \"Законодательство\")."
 msgstr ""
 "I, by submitting unique identifiers of social networks, as well as the name, "
 "surname and nicknames in them, hereinafter referred to as the \"Subject of "
 "personal data\", give my consent to the processing of my personal data by "
-"the Administration of Wild Politics, an individual Gorshenin A.I., "
-"hereinafter referred to as the \"Administration\", in accordance with the "
-"legislation of the Russian Federation (hereinafter referred to as the "
-"\"Legislation\")."
+"the Administration of Wild Politics, an individual Gorshenin Andrey "
+"Igorevich (Горшенин Андрей Игоревич), hereinafter referred to as the "
+"\"Administration\", in accordance with the legislation of the Russian "
+"Federation (hereinafter referred to as the \"Legislation\")."
 
 #: player/templates/player/privacy.html:15
 msgctxt "privacy"
