--- a/locale/be/LC_MESSAGES/django.po
+++ b/locale/be/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 17:38+0300\n"
+"POT-Creation-Date: 2025-02-12 21:01+0300\n"
 "PO-Revision-Date: 2024-12-03 16:18+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -5850,9 +5850,9 @@ msgid ""
 "Я, передавая уникальные идентификаторы социальных сетей, а также имя, "
 "фамилию и псевдонимы в них, далее именуемый(ая) \"Субъект персональных "
 "данных\", даю свое согласие на обработку своих персональных данных "
-"Администрацией Wild Politics, физическим лицом Горшенин А.И., далее "
-"именуемым \"Администрация\", в соответствии с законодательством Российской "
-"Федерации (далее - \"Законодательство\")."
+"Администрацией Wild Politics, физическим лицом Горшенин Андрей Игоревич, "
+"далее именуемым \"Администрация\", в соответствии с законодательством "
+"Российской Федерации (далее - \"Законодательство\")."
 msgstr ""
 "Я, перадавая унікальныя ідэнтэфікатары сацыяльных сетак а таксама імя, "
 "прозвішча і псеўданімы ў іх, далей называемы(ая) \"Суб'ект персанальных "
