--- a/locale/uk/LC_MESSAGES/django.po
+++ b/locale/uk/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 17:38+0300\n"
+"POT-Creation-Date: 2025-02-12 21:01+0300\n"
 "PO-Revision-Date: 2025-01-15 09:26+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -5857,9 +5857,9 @@ msgid ""
 "Я, передавая уникальные идентификаторы социальных сетей, а также имя, "
 "фамилию и псевдонимы в них, далее именуемый(ая) \"Субъект персональных "
 "данных\", даю свое согласие на обработку своих персональных данных "
-"Администрацией Wild Politics, физическим лицом Горшенин А.И., далее "
-"именуемым \"Администрация\", в соответствии с законодательством Российской "
-"Федерации (далее - \"Законодательство\")."
+"Администрацией Wild Politics, физическим лицом Горшенин Андрей Игоревич, "
+"далее именуемым \"Администрация\", в соответствии с законодательством "
+"Российской Федерации (далее - \"Законодательство\")."
 msgstr ""
 "Я, передаючи унікальні ідентифікатори соціальних мереж, а також ім'я, "
 "прізвище та псевдоніми в них, далі іменований(а) \"Суб'єкт персональних "
