--- a/locale/az/LC_MESSAGES/django.po
+++ b/locale/az/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 21:01+0300\n"
+"POT-Creation-Date: 2025-02-12 21:23+0300\n"
 "PO-Revision-Date: 2025-01-01 22:39+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -5832,9 +5832,7 @@ msgid ""
 "Я, передавая уникальные идентификаторы социальных сетей, а также имя, "
 "фамилию и псевдонимы в них, далее именуемый(ая) \"Субъект персональных "
 "данных\", даю свое согласие на обработку своих персональных данных "
-"Администрацией Wild Politics, физическим лицом Горшенин Андрей Игоревич, "
-"далее именуемым \"Администрация\", в соответствии с законодательством "
-"Российской Федерации (далее - \"Законодательство\")."
+"Администрацией Wild Politics, физическим лицом"
 msgstr ""
 "Mən sosial şəbəkələrin unikal identifikatorlarını, habelə onlardakı ad, "
 "soyad və təxəllüsləri (bundan sonra “Şəxsi məlumatların subyekti” "
@@ -5842,6 +5840,18 @@ msgstr ""
 "tərəfindən emalına razılığımı verirəm. Siyasət, fərdi Gorshenin A.I., Rusiya "
 "Federasiyasının qanunvericiliyinə (bundan sonra \"Qanunvericilik\") uyğun "
 "olaraq, bundan sonra \"İdarəetmə\" adlandırılacaq."
+
+#: player/templates/player/privacy.html:13
+msgctxt "privacy"
+msgid "Горшенин Андрей Игоревич"
+msgstr ""
+
+#: player/templates/player/privacy.html:13
+msgctxt "privacy"
+msgid ""
+"далее именуемым \"Администрация\", в соответствии с законодательством "
+"Российской Федерации (далее - \"Законодательство\")."
+msgstr ""
 
 #: player/templates/player/privacy.html:15
 #, fuzzy
