--- a/locale/sr/LC_MESSAGES/django.po
+++ b/locale/sr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 21:01+0300\n"
+"POT-Creation-Date: 2025-02-12 21:23+0300\n"
 "PO-Revision-Date: 2024-10-28 19:30+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -5649,7 +5649,17 @@ msgid ""
 "Я, передавая уникальные идентификаторы социальных сетей, а также имя, "
 "фамилию и псевдонимы в них, далее именуемый(ая) \"Субъект персональных "
 "данных\", даю свое согласие на обработку своих персональных данных "
-"Администрацией Wild Politics, физическим лицом Горшенин Андрей Игоревич, "
+"Администрацией Wild Politics, физическим лицом"
+msgstr ""
+
+#: player/templates/player/privacy.html:13
+msgctxt "privacy"
+msgid "Горшенин Андрей Игоревич"
+msgstr ""
+
+#: player/templates/player/privacy.html:13
+msgctxt "privacy"
+msgid ""
 "далее именуемым \"Администрация\", в соответствии с законодательством "
 "Российской Федерации (далее - \"Законодательство\")."
 msgstr ""
