--- a/locale/uk/LC_MESSAGES/django.po
+++ b/locale/uk/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 21:01+0300\n"
+"POT-Creation-Date: 2025-02-12 21:23+0300\n"
 "PO-Revision-Date: 2025-01-15 09:26+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -5857,9 +5857,7 @@ msgid ""
 "Я, передавая уникальные идентификаторы социальных сетей, а также имя, "
 "фамилию и псевдонимы в них, далее именуемый(ая) \"Субъект персональных "
 "данных\", даю свое согласие на обработку своих персональных данных "
-"Администрацией Wild Politics, физическим лицом Горшенин Андрей Игоревич, "
-"далее именуемым \"Администрация\", в соответствии с законодательством "
-"Российской Федерации (далее - \"Законодательство\")."
+"Администрацией Wild Politics, физическим лицом"
 msgstr ""
 "Я, передаючи унікальні ідентифікатори соціальних мереж, а також ім'я, "
 "прізвище та псевдоніми в них, далі іменований(а) \"Суб'єкт персональних "
@@ -5867,6 +5865,18 @@ msgstr ""
 "Wild Politics, фізичною особою Горшенін А.І., далі іменованим "
 "\"Адміністрація\", відповідно до законодавства Російської Федерації (Далі - "
 "\"Законодавство\")."
+
+#: player/templates/player/privacy.html:13
+msgctxt "privacy"
+msgid "Горшенин Андрей Игоревич"
+msgstr ""
+
+#: player/templates/player/privacy.html:13
+msgctxt "privacy"
+msgid ""
+"далее именуемым \"Администрация\", в соответствии с законодательством "
+"Российской Федерации (далее - \"Законодательство\")."
+msgstr ""
 
 #: player/templates/player/privacy.html:15
 #, fuzzy
